tests/ui/or-patterns/exhaustiveness-unreachable-pattern.stderr
error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:7:9
   |
LL |         (1,) => {}
   |         ^^^^^^^^^^ this arm is never executed
   |
note: the lint level is defined here
  --> $DIR/exhaustiveness-unreachable-pattern.rs:1:9
   |
LL | #![deny(unreachable_patterns)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:14:9
   |
LL |         (2,) => {}
   |         ^^^^^^^^^^ this arm is never executed

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:22:9
   |
LL |         (1 | 2,) => {}
   |         ^^^^^^^^^^^^^^ this arm is never executed

error: multiple unreachable patterns
  --> $DIR/exhaustiveness-unreachable-pattern.rs:29:9
   |
LL |         (1, 3) => {}
   |         ^^^^^^^^^^^^ this arm is never executed
...
LL |         (1, 4) => {}
   |         ^^^^^^^^^^^^ this arm is never executed
LL |
LL |         (2, 4) => {}
   |         ^^^^^^^^^^^^ this arm is never executed
LL |
LL |         (2 | 1, 4) => {}
   |         ^^^^^^^^^^^^^^^^ this arm is never executed
...
LL |         (1, 4 | 5) => {}
   |         ^^^^^^^^^^^^^^^^ this arm is never executed

error: multiple unreachable patterns
  --> $DIR/exhaustiveness-unreachable-pattern.rs:48:9
   |
LL |         (Some(1),) => {}
   |         ^^^^^^^^^^^^^^^^ this arm is never executed
...
LL |         (None,) => {}
   |         ^^^^^^^^^^^^^ this arm is never executed

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:57:9
   |
LL |         ((1..=4,),) => {}
   |         ^^^^^^^^^^^^^^^^^ this arm is never executed

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:64:14
   |
LL |         (1 | 1,) => {}
   |              ^ this pattern is unreachable

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:70:19
   |
LL |         (0 | 1) | 1 => {}
   |                   ^ this pattern is unreachable

error: multiple unreachable patterns
  --> $DIR/exhaustiveness-unreachable-pattern.rs:78:14
   |
LL |         0 | (0 | 0) => {}
   |              ^   ^ this pattern is unreachable
   |              |
   |              this pattern is unreachable

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:86:13
   |
LL | /             Some(
LL | |
LL | |
LL | |                 0 | 0) => {}
   | |______________________^ this pattern is unreachable

error: multiple unreachable patterns
  --> $DIR/exhaustiveness-unreachable-pattern.rs:95:15
   |
LL |             | 0
   |               ^ this pattern is unreachable
...
LL |             | 0] => {}
   |               ^ this pattern is unreachable

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:108:10
   |
LL |         [1
   |          ^ this pattern is unreachable

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:122:10
   |
LL |         [true
   |          ^^^^ this pattern is unreachable

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:131:36
   |
LL |         (true | false, None | Some(true
   |                                    ^^^^ this pattern is unreachable

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:138:14
   |
LL |             (true
   |              ^^^^ this pattern is unreachable
...
LL |         (true | false, None | Some(t_or_f!())) => {}
   |                                    --------- in this macro invocation
   |
   = note: this error originates in the macro `t_or_f` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:151:14
   |
LL |         Some(0
   |              ^ this pattern is unreachable

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:172:14
   |
LL |              false) => {}
   |              ^^^^^ this pattern is unreachable

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:180:15
   |
LL |             | true) => {}
   |               ^^^^ this pattern is unreachable

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:189:15
   |
LL |             | true,
   |               ^^^^ this pattern is unreachable

error: aborting due to 19 previous errors

